<resources>
    <string name="app_name">Netflix</string>
    <string name="minha_lista">Minha Lista</string>
    <string name="s_rie">Série</string>
    <string name="filmes">Filmes</string>
    <string name="inspirador">Inspirador</string>
    <string name="emocionante">Emocionante</string>
    <string name="drama">Drama</string>
    <string name="assistir">Assistir</string>
    <string name="minha_lista2">MINHA LISTA</string>
    <string name="detalhes">DETALHES</string>
    <string name="lan_amento">Lançamento</string>
    <string name="eliza_oliveira">Eliza Oliveira</string>
</resources>