<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagemCapa"
        android:layout_width="0dp"
        android:layout_height="387dp"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/capa" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewSerie"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linhaGuiaHorizontalPrimeira"
        app:layout_constraintBottom_toBottomOf="@+id/linhaGuiaHorizontalSegunda"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_rie"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/textViewFilmes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewFilmes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filmes"
        android:textColor="@color/menu_navegacao"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSerie"
        app:layout_constraintEnd_toStartOf="@+id/textViewMinhaLista"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewSerie"
        app:layout_constraintTop_toTopOf="@+id/textViewSerie" />

    <TextView
        android:id="@+id/textViewMinhaLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minha_lista"
        android:textColor="@color/menu_navegacao"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFilmes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewFilmes"
        app:layout_constraintTop_toTopOf="@+id/textViewFilmes" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="146dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/linhaGuiaHorizontalTerceira"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linhaGuiaHorizontalSegunda"
        app:srcCompat="@drawable/textofilme" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linhaGuiaHorizontalPrimeira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="14dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linhaGuiaHorizontalSegunda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linhaGuiaHorizontalTerceira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <TextView
        android:id="@+id/txtInspirador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inspirador"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtEmocionante"
        app:layout_constraintEnd_toStartOf="@+id/txtEmocionante"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/linhaGuiaEsquerda"
        app:layout_constraintTop_toTopOf="@+id/txtEmocionante" />

    <TextView
        android:id="@+id/txtEmocionante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/emocionante"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/txtDrama"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtInspirador"
        app:layout_constraintTop_toTopOf="@+id/linhaGuiaHorizontalTerceira" />

    <TextView
        android:id="@+id/txtDrama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drama"
        android:textColor="@color/menu_navegacao"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtEmocionante"
        app:layout_constraintEnd_toEndOf="@id/linhaGuiaDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtEmocionante"
        app:layout_constraintTop_toTopOf="@+id/txtEmocionante" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linhaGuiaEsquerda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linhaGuiaDireita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <Button
        android:id="@+id/btAssistir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icplay"
        android:text="@string/assistir"
        app:layout_constraintEnd_toStartOf="@+id/btDetalhes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btLista"
        app:layout_constraintTop_toBottomOf="@id/txtEmocionante"
        android:layout_marginTop="28dp"
        tools:layout_editor_absoluteY="285dp" />

    <Button
        android:id="@+id/btLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/icplus"
        android:text="@string/minha_lista2"
        app:layout_constraintBottom_toBottomOf="@+id/btAssistir"
        app:layout_constraintEnd_toStartOf="@+id/btAssistir"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/linhaGuiaEsquerda"
        app:layout_constraintTop_toTopOf="@+id/btAssistir" />

    <Button
        android:id="@+id/btDetalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/icinfo"
        android:text="@string/detalhes"
        app:layout_constraintBottom_toBottomOf="@+id/btAssistir"
        app:layout_constraintEnd_toEndOf="@id/linhaGuiaDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btAssistir"
        app:layout_constraintTop_toTopOf="@+id/btAssistir" />

    <TextView
        android:id="@+id/textViewLancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lan_amento"
        android:textColor="@color/menu_navegacao"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/linhaGuiaEsquerda"
        app:layout_constraintTop_toBottomOf="@+id/btAssistir"
        tools:layout_editor_absoluteX="29dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="85dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/linhaGuiaEsquerda"
        app:layout_constraintTop_toBottomOf="@+id/textViewLancamento"
        app:srcCompat="@drawable/f1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="85dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/f2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="85dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@id/linhaGuiaDireita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/f3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/eliza_oliveira"
        android:textColor="@color/menu_navegacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


</androidx.constraintlayout.widget.ConstraintLayout>